[#163954159]: fix overlapping sidebar

--- a/src/app/article/article.scss
+++ b/src/app/article/article.scss
@@ -12,7 +12,7 @@
   margin-bottom: auto;
   width: 10%;
   position: fixed;
-  height: 100%;
+  height: 70%;
 }
 
 .left-sidebar {
@@ -31,7 +31,7 @@
 }
 
 .right-sidebar-cover {
-  height: 100%;
+  height: 70%;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@
   position: fixed;
   right: 0;
   width: 10%;
+  margin-bottom: 10%;
 }
 
 .right-sidebar {
@@ -87,7 +88,9 @@
   border-bottom: none;
   box-sizing: border-box;
   margin-left: 10%;
+  margin-right: 10%;
   width: 80%;
+  max-width: none;
 }
 
 .wrapper {
